--- a/internal/cli/templates/template_env_local_example.env
+++ b/internal/cli/templates/template_env_local_example.env
@@ -3,4 +3,4 @@ LOG_LEVEL = INFO # DEBUG, INFO, WARN, ERROR
 PORT_HTTP = 7000
 PORT_SWAGGER = 7001
 PORT_GRPC = 7002
-HOST = "localhost"
+HOST = "127.0.0.1"
